Add all training notebooks _toc file yml file and img and shape_files folders

--- a/_toc.yml
+++ b/_toc.yml
@@ -6,7 +6,15 @@ root: intro-jupyter-template
 chapters:
 - file: jupyter-notebook-template-copernicus
 #   title: Title to appear on the left hand pane (Defaults to the Title in the notebook)
+- file: download-data-from-cds
+- file: download-subsample-of-data-from-cds
+- file: explore-csv-data
+- file: explore-netcdf-data
 - file: explore-different-wind-technologies
+- file: explore-different-pv-technologies
+- file: climate-change-impacts
+- file: custom-spatial-aggregation
+- file: overplanting
 # - file: example-notebook
 #   title: Example notebook
 
